Update index.html file

--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
   <meta charset="utf-8">
   <title>Coco's Chocolatier</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
 </head>
 <body>
+
+<header>
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Hours</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
+  <h1>Coco's Chocolatier</h1>
+  <img src="images/placeholder-3by2.svg" alt="">
+</header>
+
+<body>
+  <main>
+    <div>
+      <a href="#"><img src="images/placeholder-circle.svg" alt=""></a>
+      <a href="#"><img src="images/placeholder-circle.svg" alt=""></a>
+      <a href="#"><img src="images/placeholder-circle.svg" alt=""></a>
+    </div>
+  </main>
+
+  <h2>Specials</h2>
+  <img src="images/placeholder-1by1.svg" alt="">
+    <p>description</p>
+  <img src="images/placeholder-1by1.svg" alt="">
+    <p>description</p>
+
+<footer>
+</footer>
 
 </body>
 </html>
