Update index.html file

--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
   <meta charset="utf-8">
   <title>Coco's Chocolatier</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<header>
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Hours</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Hours</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <h1>Coco's Chocolatier</h1>
-  <img src="images/placeholder-3by2.svg" alt="">
-</header>
+    <h1>Coco's Chocolatier
+    <img class="pic" src="images/placeholder-1by1.svg" alt="">
+    </h1>
 
-<body>
   <main>
     <div>
       <a href="#"><img src="images/placeholder-circle.svg" alt=""></a>
@@ -38,8 +38,9 @@
   <img src="images/placeholder-1by1.svg" alt="">
     <p>description</p>
 
-<footer>
-</footer>
+    <footer>
+      <small>© Berries.</small>
+    </footer>
 
 </body>
 </html>
