Update index.html file

--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Hours</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="home">Home</a></li>
+        <li><a href="hours">Hours</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="contact">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-    <h1>Coco's Chocolatier
-    <img class="pic" src="images/placeholder-1by1.svg" alt="">
-    </h1>
+  <figure>
+    <img class="pic" src="images/placeholder-3by1.svg" alt="">
+    <figcaption>Coco's Chocolatier</figcaption>
+  </figure>
 
   <main>
     <div>
-      <a href="#"><img src="images/placeholder-circle.svg" alt=""></a>
-      <a href="#"><img src="images/placeholder-circle.svg" alt=""></a>
-      <a href="#"><img src="images/placeholder-circle.svg" alt=""></a>
+      <a href="circle"><img src="images/placeholder-circle.svg" alt=""></a>
+      <a href="cirlce"><img src="images/placeholder-circle.svg" alt=""></a>
+      <a href="circle"><img src="images/placeholder-circle.svg" alt=""></a>
     </div>
   </main>
 
