Add description for the specials

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 
   <h2>Specials</h2>
   <img src="images/placeholder-1by1.svg" alt="">
-    <p>description</p>
+  <h3>Gourmet 16pc</h3>
+    <p>This is THE gift for the foodie who has plenty of cookbooks, cheese boards and kitchen gadgets already. Includes pairs of Champagne, Saskatoon Berry, Yuzu, Goat Cheese & Chardonnay, Raspberry Balsamic, Pumpkin Caramel and Petit Chocolat (or Lemon Blackberry)</p>
   <img src="images/placeholder-1by1.svg" alt="">
-    <p>description</p>
+  <h3>Peppermint Truffles</h3>
+    <p>These seasonally sensational milk chocolate truffles have notes of peppermint, coffee nuts and a lingering christmas flavour that doesn't quit, inside a milk chocolate shell.</p>
 
     <footer>
       <small>© Berries.</small>
