Update index.html file

--- a/index.html
+++ b/index.html
@@ -20,26 +20,42 @@
     </nav>
   </header>
 
-  <figure>
-    <img class="pic" src="images/placeholder-3by1.svg" alt="">
-    <figcaption>Coco's Chocolatier</figcaption>
-  </figure>
+  <div class="flex">
+    <figure class="coco">
+      <img class="img-flex" src="images/placeholder-3by2.svg" alt="">
+      <figcaption>Coco's Chocolatier</figcaption>
+    </figure>
 
-  <main>
-    <div>
-      <a href="circle"><img src="images/placeholder-circle.svg" alt=""></a>
-      <a href="cirlce"><img src="images/placeholder-circle.svg" alt=""></a>
-      <a href="circle"><img src="images/placeholder-circle.svg" alt=""></a>
+    <main>
+      <div class="circ">
+        <h2 class="prod">Products</h2>
+        <a href="circle"><img src="images/placeholder-circle.svg" alt=""></a>
+        <a href="cirlce"><img src="images/placeholder-circle.svg" alt=""></a>
+        <a href="circle"><img src="images/placeholder-circle.svg" alt=""></a>
+      </div>
+    </main>
+  </div>
+
+
+  <div class="special">
+    <h2 class="spec">Specials</h2>
+    <div class="specials">
+      <div class="gour">
+        <img src="images/placeholder-1by1.svg" alt="">
+        <div class="not">
+          <h3>Gourmet 16pc</h2>
+          <p>This is THE gift for the foodie who has plenty of cookbooks, cheese boards and kitchen gadgets already. Includes pairs of Champagne, Saskatoon Berry, Yuzu, Goat Cheese & Chardonnay, Raspberry Balsamic, Pumpkin Caramel and Petit Chocolat (or Lemon Blackberry)</p>
+        </div>
+      </div>
+      <div class="pepper">
+        <img src="images/placeholder-1by1.svg" alt="">
+        <div class="not">
+          <h3>Peppermint Truffles</h3>
+          <p>These seasonally sensational milk chocolate truffles have notes of peppermint, coffee nuts and a lingering christmas flavour that doesn't quit, inside a milk chocolate shell.</p>
+        </div>
+      </div>
     </div>
-  </main>
-
-  <h2>Specials</h2>
-  <img src="images/placeholder-1by1.svg" alt="">
-  <h3>Gourmet 16pc</h3>
-    <p>This is THE gift for the foodie who has plenty of cookbooks, cheese boards and kitchen gadgets already. Includes pairs of Champagne, Saskatoon Berry, Yuzu, Goat Cheese & Chardonnay, Raspberry Balsamic, Pumpkin Caramel and Petit Chocolat (or Lemon Blackberry)</p>
-  <img src="images/placeholder-1by1.svg" alt="">
-  <h3>Peppermint Truffles</h3>
-    <p>These seasonally sensational milk chocolate truffles have notes of peppermint, coffee nuts and a lingering christmas flavour that doesn't quit, inside a milk chocolate shell.</p>
+  </div>
 
     <footer>
       <small>© Berries.</small>
