--- a/index.html
+++ b/index.html
@@ -20,22 +20,20 @@
     </nav>
   </header>
 
-  <div class="flex">
-    <figure class="coco">
-      <img class="img-flex" src="images/placeholder-3by2.svg" alt="">
-      <figcaption>Coco's Chocolatier</figcaption>
-    </figure>
+  <main>
+    <section class="flex">
+      <figure class="coco">
+        <img class="img-flex" src="images/placeholder-3by2.svg" alt="">
+        <h1>Coco's Chocolatier</h1>
+      </figure>
 
-    <main>
       <div class="circ">
         <h2 class="prod">Products</h2>
         <a href="circle"><img src="images/placeholder-circle.svg" alt=""></a>
         <a href="cirlce"><img src="images/placeholder-circle.svg" alt=""></a>
         <a href="circle"><img src="images/placeholder-circle.svg" alt=""></a>
       </div>
-    </main>
-  </div>
-
+  </section>
 
   <div class="special">
     <h2 class="spec">Specials</h2>
@@ -60,6 +58,7 @@
     <footer>
       <small>© Berries.</small>
     </footer>
+</main>
 
 </body>
 </html>
